# finkargo_service_desk

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql  tasks.md
backend/: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: database.py
backend/app/middlewares/: error_handler.py  jwt_bearer.py
backend/app/models/: __init__.py  issue.py  project.py  ticket.py  user.py
backend/app/routers/: issue.py  project.py  ticket.py  user.py
backend/app/schemas/: issue.py  project.py  ticket.py  user.py
backend/app/services/: issue.py  project.py  ticket.py  user.py
backend/app/utils/: jwt_manager.py  password_manager.py  to_camel.py
frontend/: .editorconfig  .eslintrc.cjs  .prettierignore  .prettierrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ChipStatus/: ChipStatus.tsx
frontend/src/components/MaterialUITable/: MaterialUITable copy.tsx  MaterialUITable.tsx  index.tsx
frontend/src/components/MenuDrawer/: MenuDrawer.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/PageTitle/: PageTitle.tsx
frontend/src/containers/NotificationProvider/: NotificationProvider.tsx  index.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: MainLayout.tsx
frontend/src/models/: ProjectModels.ts  TicketModels.ts  UserModels.ts  generalModels.ts
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/routes/: ProtectedRoute.tsx  Routes.tsx
frontend/src/services/: instance.ts
frontend/src/theme/: GlobalStylesWrapper.tsx  theme.ts
frontend/src/utils/: capitalizeFirstLetter.ts  menuList.ts  theme.ts  validationInputs.ts
sql/: public.issues.sql  public.user.sql
(+14 files in other folders)
